...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/createListButton"
        android:layout_width="250dp"
        android:layout_height="56dp"
        android:layout_marginBottom="40dp"
        android:fontFamily="monospace"
        android:text="CREATE NEW LIST"
        android:textSize="16sp"
...
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/remindersListView"
        android:layout_width="416dp"
        android:layout_height="470dp"
        android:layout_marginTop="28dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.6"
        app:layout_constraintStart_toStartOf="parent"
...
